fixed header logo and spacing

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -14,11 +14,20 @@
   margin: 0;
 }
 
-@media screen and (max-width: 615px) {
+@media screen and (max-width: 620px) {
+  .footer {
+    padding: 0 19px;
+    width: 619px;
+  }
+
   .footer__copyright {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
     font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .footer {
+    padding: 0 auto;
+    width: 282px;
   }
 }
