--- a/blocks/header.css
+++ b/blocks/header.css
@@ -8,8 +8,19 @@
   box-sizing: border-box;
 }
 
+.header__logo {
+  width: 173px;
+  height: 33px;
+}
+
 @media screen and (max-width: 620px) {
   .header {
-    margin: 0;
+    margin: 0 auto;
+    padding: 28px 27px;
+  }
+
+  .header__logo {
+    width: 126px;
+    height: 24px;
   }
 }
