--- a/blocks/page.css
+++ b/blocks/page.css
@@ -16,3 +16,10 @@
   min-height: 100vh;
   padding: 0 20px;
 }
+
+@media screen and (max-width: 620px) {
+  .page__content {
+    margin: 0;
+    padding: 0;
+  }
+}
