--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -100,6 +100,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+    margin: 0;
   }
 
   .profile__title {
